--- a/src/pages/2023/awards-global-stem-service.mdx
+++ b/src/pages/2023/awards-global-stem-service.mdx
@@ -11,6 +11,8 @@ import { AwardeeCard } from "../../components/awards/AwardeeCard";
 
 <div>
 
+## oSTEM Global STEM Service Award
+
 ### Award Description
 
 This award is presented to an active member, alumnus/a, chapter mentor, or
