--- a/src/pages/2023/awards-overall-chapter.mdx
+++ b/src/pages/2023/awards-overall-chapter.mdx
@@ -2,14 +2,16 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 import { AwardCardButton } from "../../components/awards/AwardCard";
 import { AwardeeCard } from "../../components/awards/AwardeeCard";
 
-<SiteLayout title="Awards - Global STEM Service Award">
+<SiteLayout title="Awards - Overall Chapter">
 <div className="border-b-4 border-apricot border-solid pb-4 mb-4 text-center">
   <p className="text-5xl font-display font-black">
-    Awards - oSTEM Chapter of the Year
+    Awards - Overall Chapter
   </p>
 </div>
 
 <div>
+
+## oSTEM Chapter of the Year
 
 ### Award Description
 
