--- a/src/pages/2023/awards-lgbtq-employee-network.mdx
+++ b/src/pages/2023/awards-lgbtq-employee-network.mdx
@@ -1,4 +1,6 @@
 import { SiteLayout } from "../../components/layout/SiteLayout";
+import { AwardCardButton } from "../../components/awards/AwardCard";
+import { AwardeeCard } from "../../components/awards/AwardeeCard";
 
 <SiteLayout title="Awards - LGBTQ+ Employee Network">
   <div className="border-b-4 border-apricot border-solid pb-4 mb-4 text-center">
@@ -6,4 +8,70 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
       Awards - LGBTQ+ Employee Network
     </p>
   </div>
+
+<div>
+
+## oSTEM LGBTQ+ Employee Network of the Year
+
+### Award Description
+
+Support, a sense of belonging, and encouragement are key to employee growth,
+positive performance, and retention. Employee Networks have stepped in to
+fulfill these basic human needs through the creation of a community that
+supports employees, champions inclusion and diversity, and reaches out to better
+the community around them for all people. The vitality of these employee groups
+cannot be overstated, and the hard work they do deserves recognition. The oSTEM
+LGBTQ+ Employee Network of the Year Award highlights and applauds the work of an
+organization's employee network that embodies the oSTEM mission of empowering
+LGBTQ+ people in STEM to succeed personally, academically, and professionally
+through the cultivation of environments and communities that nurture innovation,
+leadership, and advocacy.
+
+### Eligibility
+
+- Must be a current sponsoring organization of oSTEM
+- Must be have a representative attending the oSTEM Annual Conference
+
+<br />
+
+Self-nominations are accepted and encouraged. Please only submit one nomination
+per organization. If you have any questions regarding this application, please
+contact us at sponsorship@ostem.org.
+
+<br />
+<div align="center">
+  <AwardCardButton url="https://forms.gle/sv1tm2JkYKJH2cYH9">
+    Nominate Someone for this Award
+  </AwardCardButton>
+</div>
+
+</div>
+
+<br />
+
+<div>
+
+### Previous Awardees
+
+<div className="grid gap-8 md:grid-cols-2 my-1">
+  <AwardeeCard
+    awardeeName="National Grid"
+    awardYear={2020}
+    profileImg="/images/awards/employee-network-award/national-grid-2020.jpeg"
+    altDesc="logo of National Grid"
+    width={200}
+    height={200}
+  />
+  <AwardeeCard
+    awardeeName="Merck Rainbow Alliance"
+    awardYear={2019}
+    profileImg="/images/awards/employee-network-award/merck-2019.png"
+    altDesc="logo of Merck Rainbow Alliance"
+    width={200}
+    height={94}
+  />
+</div>
+
+</div>
+
 </SiteLayout>
