--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -22,12 +22,12 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 
 ## Benefits for Presenters
 </div>
-- 50% discount for selected presenters. Each selected panel is limited to 4 presenter discount codes. <br>
-- Selected talk for national conference to add to resume or CV<br>
-- Public speaking experience <br>
-- Increased visibility and networking at the conference <br>
-- Opportunity to present topics on lived experiences, identities, and intersectional in addition to academic and professional development <br>
-- Acknowledgement in conference program book and badge <br>
+- 50% discount for selected presenters. Each selected panel is limited to 4 presenter discount codes. <br/>
+- Selected talk for national conference to add to resume or CV<br/>
+- Public speaking experience <br/>
+- Increased visibility and networking at the conference <br/>
+- Opportunity to present topics on lived experiences, identities, and intersectional in addition to academic and professional development <br/>
+- Acknowledgement in conference program book and badge <br/>
   
   ## Program Topics
 
