--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -28,7 +28,7 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 - Selected talk for national conference to add to resume or CV<br/>
 - Public speaking experience <br/>
 - Increased visibility and networking at the conference <br/>
-- Opportunity to present topics on lived experiences, identities, and intersectional in addition to academic and professional development <br/>
+- Opportunity to present topics on lived experiences and identities in addition to academic and professional development <br/>
 - Acknowledgement in conference program book and badge <br/>
 
 <div className="text-bright-peach font-bold">
