--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -24,12 +24,12 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
   
 </div>
 
-- 50% discount for selected presenters. Each selected panel is limited to 4 presenter discount codes. <br/>
-- Selected talk for national conference to add to resume or CV<br/>
-- Public speaking experience <br/>
-- Increased visibility and networking at the conference <br/>
-- Opportunity to present topics on lived experiences and identities in addition to academic and professional development <br/>
-- Acknowledgement in conference program book and badge <br/>
+- 50% registration discount for selected presenters. Each selected panel is limited to 4 presenter discount codes. <br/>
+- Add "Selected Talk for National Conference" to resume or CV <br/>
+- Gain additional public speaking experience <br/>
+- Increase visibility and networking opportunities with LGBTQ+ professionals and recruiters in STEM <br/>
+- Able to present on lived experiences and identities in addition to academic and professional development <br/>
+- Receive presenter acknowledgement in conference program book and on badge <br/>
 
 <div className="text-bright-peach font-bold">
   
