--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -28,7 +28,7 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 - Add "Selected Talk for National Conference" to resume or CV <br/>
 - Gain additional public speaking experience <br/>
 - Increase visibility and networking opportunities with LGBTQ+ professionals and recruiters in STEM <br/>
-- Able to present on lived experiences and identities in addition to academic and professional development <br/>
+- Present on lived experiences and identities in addition to academic and professional development <br/>
 - Receive presenter acknowledgement in conference program book and on badge <br/>
 
 <div className="text-bright-peach font-bold">
