--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -15,7 +15,7 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 </div>
 
 - **Monday, April 3**: Request for Programming Released
-- **Friday, June 2**: Deadline for Submissions
+- **EXTENDED! Friday, June 30**: Deadline for Submissions
 - **Friday, July 14**: RFP Decision Notifications
 
 <div className="text-bright-peach font-bold">
