--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -26,8 +26,9 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <h3 className="p-4">Upcoming Dates</h3>
     </div>
     <p className="p-4">
-      Request for Programs Open: April 2023 <br />
+      Request for Programs Open NOW!
       Call for Posters Open: June 2023 <br />
+      Call for Chapter Award Nominations Open: June 21, 2023
       Early Bird Registration: July 2023 <br />
       Full-Priced Registration: August 2023 <br />
       Registration Deadline: October 15, 2023 <br />
