--- a/src/pages/2023/awards-chapter-leader.mdx
+++ b/src/pages/2023/awards-chapter-leader.mdx
@@ -31,7 +31,7 @@ their efforts.
 
 - Must be a chapter leader of a verified Standard oSTEM Chapter or Affiliate
   Chapter of active status in good standing with your Regional Coordinator
-- Must be attending the oSTEM Annual Conference
+- Must be attending the oSTEM Annual Conference. 
 
 <br />
 
@@ -40,7 +40,7 @@ regarding this application, please contact us at membership@ostem.org.
 
 <br />
 <div align="center">
-  <AwardCardButton url="https://forms.gle/MWMysVcRivv85t1cA">
+  <AwardCardButton url="https://form.jotform.com/231425712400341">
     Nominate Someone for this Award
   </AwardCardButton>
 </div>
