--- a/src/pages/2023/awards-overall-chapter.mdx
+++ b/src/pages/2023/awards-overall-chapter.mdx
@@ -36,7 +36,7 @@ regarding this application, please contact us at membership@ostem.org.
 
 <br />
 <div align="center">
-  <AwardCardButton url="https://forms.gle/daxNPtKTFXLaiG47A">
+  <AwardCardButton url="https://form.jotform.com/231424936571357">
     Nominate Someone for this Award
   </AwardCardButton>
 </div>
