--- a/src/pages/2023/awards-rookie-chapter.mdx
+++ b/src/pages/2023/awards-rookie-chapter.mdx
@@ -35,7 +35,7 @@ regarding this application, please contact us at membership@ostem.org.
 
 <br />
 <div align="center">
-  <AwardCardButton url="https://forms.gle/hFT6CFfDaj7FH5tMA">
+  <AwardCardButton url="https://form.jotform.com/231424895247361">
     Nominate Someone for this Award
   </AwardCardButton>
 </div>
