--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -28,7 +28,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     <p className="p-4">
       Request for Programs Open NOW!
       Call for Posters Open: June 2023 <br />
-      Call for Chapter Award Nominations Open: June 21, 2023
+      Call for Chapter Award Nominations Open: June 21, 2023 <br />
       Early Bird Registration: July 2023 <br />
       Full-Priced Registration: August 2023 <br />
       Registration Deadline: October 15, 2023 <br />
