--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -51,7 +51,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       job/school consider presenting at oSTEM's Annual Conference.
       <br />
       <br />
-      Submit your program to our Request for Presentations today!
+      <b> Deadline was extended to Friday, June 30th. Submit your proposal today! </b>
     </p>
     <div className="text-xl flex justify-center p-2">
       <CTAButton onClick="/2023/rfp" backgroundColor="bright-peach">
