--- a/src/pages/2023/awards.mdx
+++ b/src/pages/2023/awards.mdx
@@ -12,7 +12,7 @@ supporters during the oSTEM Annual Conference. Please review the award
 descriptions below and provide nominations for those individuals and groups you
 believe deserve recognition.
 
-<div className="text-spruce-light font-bold">
+<div className="text-bright-peach font-bold">
 
 ## Our Awards
 
