Add awardees of 2020/2021/2022

--- a/src/pages/2023/awards-chapter-leader.mdx
+++ b/src/pages/2023/awards-chapter-leader.mdx
@@ -31,7 +31,7 @@ their efforts.
 
 - Must be a chapter leader of a verified Standard oSTEM Chapter or Affiliate
   Chapter of active status in good standing with your Regional Coordinator
-- Must be attending the oSTEM Annual Conference. 
+- Must be attending the oSTEM Annual Conference.
 
 <br />
 
@@ -53,7 +53,31 @@ regarding this application, please contact us at membership@ostem.org.
 
 ### Previous Awardees
 
-<div className="grid gap-8 md:grid-cols-3 my-1">
+<div className="grid gap-8 md:grid-cols-2 my-1">
+  <AwardeeCard
+    awardeeName="Nova Moore - Central Michigan University"
+    awardYear={2022}
+    profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
+    altDesc="Profile picture of Nova Moore"
+    width={150}
+    height={225}
+  />
+  <AwardeeCard
+    awardeeName="Kai Janicki - University of Central Florida"
+    awardYear={2021}
+    profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
+    altDesc="Profile picture of Kai Janicki"
+    width={150}
+    height={225}
+  />
+  <AwardeeCard
+    awardeeName="Lex Yu - USC quest"
+    awardYear={2020}
+    profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
+    altDesc="Profile picture of Lex Yu"
+    width={150}
+    height={225}
+  />
   <AwardeeCard
     awardeeName="Billie Harrer - Region C Coordinator"
     awardYear={2019}
