--- a/src/pages/2023/awards-overall-chapter.mdx
+++ b/src/pages/2023/awards-overall-chapter.mdx
@@ -51,6 +51,30 @@ regarding this application, please contact us at membership@ostem.org.
 
 <div className="grid gap-8 md:grid-cols-2 my-1">
   <AwardeeCard
+    awardeeName="oSTEM at Texas A&M University"
+    awardYear={2022}
+    profileImg="/images/awards/chapter-award/Texas-A&M-2022.png"
+    altDesc="logo of Texas A&M University"
+    width={180}
+    height={150}
+  />
+  <AwardeeCard
+    awardeeName="oSTEM at University of Kansas"
+    awardYear={2021}
+    profileImg="/images/awards/chapter-award/university-of-kansas-2016.png"
+    altDesc="logo of University of Kansas"
+    width={200}
+    height={171}
+  />
+  <AwardeeCard
+    awardeeName="oSTEM at University of Kansas"
+    awardYear={2020}
+    profileImg="/images/awards/chapter-award/UCF-Logo-2020.png"
+    altDesc="logo of University of Kansas"
+    width={360}
+    height={200}
+  />
+  <AwardeeCard
     awardeeName="oSTEM at University of California San Diego"
     awardYear={2019}
     profileImg="/images/awards/chapter-award/ucsd-logo-2019.png"
