--- a/src/pages/2023/awards-rookie-chapter.mdx
+++ b/src/pages/2023/awards-rookie-chapter.mdx
@@ -48,7 +48,31 @@ regarding this application, please contact us at membership@ostem.org.
 
 ### Previous Awardees
 
-<div className="grid gap-8 md:grid-cols-3 my-1">
+<div className="grid gap-8 md:grid-cols-2 my-1">
+  <AwardeeCard
+    awardeeName="oSTEM at Cal Poly San Luis Obispo"
+    awardYear={2022}
+    profileImg="/images/awards/rookie-chapter-award/CalPoly-2022.svg.png"
+    altDesc="logo of Cal Poly"
+    width={160}
+    height={160}
+  />
+  <AwardeeCard
+    awardeeName="oSTEM at University of Tennessee, Knoxville"
+    awardYear={2021}
+    profileImg="/images/awards/rookie-chapter-award/university-of-tennessee-2021.png"
+    altDesc="logo of Howard University"
+    width={160}
+    height={160}
+  />
+  <AwardeeCard
+    awardeeName="oSTEM at University of Illinois at Chicago"
+    awardYear={2020}
+    profileImg="/images/awards/rookie-chapter-award/university-of-illinois-at-chicago-logo-2020.png"
+    altDesc="logo of University of Illinois at Chicago"
+    width={160}
+    height={160}
+  />
   <AwardeeCard
     awardeeName="oSTEM at Howard University"
     awardYear={2019}
