--- a/src/pages/2023/awards.mdx
+++ b/src/pages/2023/awards.mdx
@@ -131,6 +131,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   borderColor="border-blue-500"
   alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at membership@ostem.org."
   nominateUrl="https://form.jotform.com/231425475169359"
+  awardDetailUrl="\2023\awards-advisor"
 />
 </div>
 
@@ -194,6 +195,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
     "Must be attending the oSTEM Annual Conference"
   ]}
   borderColor="border-green-500"
+  awardDetailUrl="/2023/awards-volunteer"
 />
 <div>
 
