--- a/src/pages/2023/awards-advisor.mdx
+++ b/src/pages/2023/awards-advisor.mdx
@@ -56,10 +56,10 @@ regarding this application, please contact us at membership@ostem.org.
   <AwardeeCard
     awardeeName="Sean Dowd - NJIT Spectrum"
     awardYear={2022}
-    profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
+    profileImg="/images/awards/advisor-award/sean-dowd-2022.jpg"
     altDesc="Profile picture of Sean Dowd"
-    width={150}
-    height={225}
+    width={300}
+    height={200}
   />
 </div>
 
