--- a/src/pages/2023/awards-chapter-leader.mdx
+++ b/src/pages/2023/awards-chapter-leader.mdx
@@ -55,12 +55,12 @@ regarding this application, please contact us at membership@ostem.org.
 
 <div className="grid gap-8 md:grid-cols-2 my-1">
   <AwardeeCard
-    awardeeName="Nova Moore - Central Michigan University"
+    awardeeName="Lex Yu - USC quest"
     awardYear={2022}
-    profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
-    altDesc="Profile picture of Nova Moore"
-    width={150}
-    height={225}
+    profileImg="/images/awards/chapter-leader-award/lex-yu-2022.jpg"
+    altDesc="Profile picture of Lex Yu"
+    width={300}
+    height={200}
   />
   <AwardeeCard
     awardeeName="Kai Janicki - University of Central Florida"
@@ -71,10 +71,10 @@ regarding this application, please contact us at membership@ostem.org.
     height={225}
   />
   <AwardeeCard
-    awardeeName="Lex Yu - USC quest"
+    awardeeName="Nova Moore - Central Michigan University"
     awardYear={2020}
     profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
-    altDesc="Profile picture of Lex Yu"
+    altDesc="Profile picture of Nova Moore"
     width={150}
     height={225}
   />
