--- a/src/pages/2023/awards-overall-chapter.mdx
+++ b/src/pages/2023/awards-overall-chapter.mdx
@@ -67,10 +67,10 @@ regarding this application, please contact us at membership@ostem.org.
     height={171}
   />
   <AwardeeCard
-    awardeeName="oSTEM at University of Kansas"
+    awardeeName="oSTEM at University of Central Florida"
     awardYear={2020}
     profileImg="/images/awards/chapter-award/UCF-Logo-2020.png"
-    altDesc="logo of University of Kansas"
+    altDesc="logo of University of Central Florida"
     width={360}
     height={200}
   />
