--- a/src/pages/2023/awards-global-stem-service.mdx
+++ b/src/pages/2023/awards-global-stem-service.mdx
@@ -49,6 +49,22 @@ regarding this application, please contact us at info@ostem.org.
 
 <div className="grid gap-8 md:grid-cols-3 my-1">
   <AwardeeCard
+    awardeeName="Angie Gonzalez"
+    awardYear={2022}
+    profileImg="/images/awards/service-award/angie-gonzalez-2022.jpg"
+    altDesc="Profile picture of Angie Gonzalez"
+    width={300}
+    height={200}
+  />
+  <AwardeeCard
+    awardeeName="Lee Trent"
+    awardYear={2021}
+    profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
+    altDesc="Profile picture of Lee Trent"
+    width={200}
+    height={200}
+  />
+  <AwardeeCard
     awardeeName="Cel Welch"
     awardYear={2020}
     profileImg="/images/awards/service-award/cel-welch-2020.jpg"
