Add hyperlink to each award category

--- a/src/pages/2023/awards.mdx
+++ b/src/pages/2023/awards.mdx
@@ -19,12 +19,12 @@ believe deserve recognition.
 </div>
 
 <div className="grid gap-4 sm:grid-cols-2 my-1">
-<AwardSquare title="Service Awards" borderColor="border-red-500">
+<AwardSquare title="Service Awards" borderColor="border-red-500" href="#service-awards">
 
 - Global STEM Service Award
 
 </AwardSquare>
-<AwardSquare title="Chapter Awards" borderColor="border-blue-500">
+<AwardSquare title="Chapter Awards" borderColor="border-blue-500" href="#chapter-awards">
 
 - Chapter of the Year - Group
 - Rookie Chapter of the Year - Group
@@ -32,14 +32,14 @@ believe deserve recognition.
 - Advisor of the Year - Individual **_New!_**
 
 </AwardSquare>
-<AwardSquare title="Sponsor Awards" borderColor="border-yellow-500">
+<AwardSquare title="Sponsor Awards" borderColor="border-yellow-500" href="#sponsor-awards">
 
 - Strategic Alliance Award - Organization
 - Partner Excellence Award - Individual
 - LGBTQ+ Employee Network of the Year - Group
 
 </AwardSquare>
-<AwardSquare title="Volunteer Awards" borderColor="border-green-500">
+<AwardSquare title="Volunteer Awards" borderColor="border-green-500" href="#volunteer-awards">
 
 - Volunteer of the Year - Individual
 - Volunteer Spotlights - Individual, Multiple
@@ -54,7 +54,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
 
 <br />
 
-<div className="text-bright-peach font-bold">
+<div className="text-bright-peach font-bold" id="service-awards">
 
 ## Service Awards
 
@@ -74,7 +74,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   />
 </div>
 
-<div className="text-bright-peach font-bold">
+<div className="text-bright-peach font-bold" id="chapter-awards">
 
 ## Chapter Awards
 
@@ -135,7 +135,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
 />
 </div>
 
-<div className="text-bright-peach font-bold">
+<div className="text-bright-peach font-bold" id="sponsor-awards">
 
 ## Sponsor Awards
 
@@ -182,7 +182,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
 />
 </div>
 
-<div className="text-bright-peach font-bold">
+<div className="text-bright-peach font-bold" id="volunteer-awards">
 
 ## Volunteer Awards
 
