--- a/src/pages/2023/awards-lgbtq-employee-network.mdx
+++ b/src/pages/2023/awards-lgbtq-employee-network.mdx
@@ -55,6 +55,22 @@ contact us at sponsorship@ostem.org.
 
 <div className="grid gap-8 md:grid-cols-2 my-1">
   <AwardeeCard
+    awardeeName="Pride at Accenture"
+    awardYear={2022}
+    profileImg="/images/awards/employee-network-award/pride-at-accenture-logo.jpg"
+    altDesc="logo of Pride at Accenture"
+    width={300}
+    height={180}
+  />
+  <AwardeeCard
+    awardeeName="Boeing Employees Pride Alliance"
+    awardYear={2021}
+    profileImg="/images/awards/employee-network-award/Boeing-BEPA-logo.jpg"
+    altDesc="logo of Boeing Employees Pride Alliance"
+    width={300}
+    height={89}
+  />
+  <AwardeeCard
     awardeeName="National Grid"
     awardYear={2020}
     profileImg="/images/awards/employee-network-award/national-grid-2020.jpeg"
