--- a/src/pages/2023/awards-partner-excellence.mdx
+++ b/src/pages/2023/awards-partner-excellence.mdx
@@ -49,7 +49,23 @@ regarding this application, please contact us at sponsorship@ostem.org.
 
 ### Previous Awardees
 
-<div className="grid gap-8 md:grid-cols-3 my-1">
+<div className="grid gap-8 md:grid-cols-2 my-1">
+  <AwardeeCard
+    awardeeName="Casady Wyckoff - The Boeing Company"
+    awardYear={2022}
+    profileImg="/images/awards/partner-excellence-award/casady-2022.jpg"
+    altDesc="Profile picture of Casady Wyckoff"
+    width={300}
+    height={200}
+  />
+  <AwardeeCard
+    awardeeName="Stuart Duncan - University of Connecticut"
+    awardYear={2021}
+    profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
+    altDesc="Profile picture of Stuart Duncan"
+    width={180}
+    height={220}
+  />
   <AwardeeCard
     awardeeName="Beau Williams - Boeing Sr Manager"
     awardYear={2019}
