--- a/src/pages/2023/awards-strategic-alliance.mdx
+++ b/src/pages/2023/awards-strategic-alliance.mdx
@@ -51,6 +51,22 @@ contact us at sponsorship@ostem.org.
 
 <div className="grid gap-8 md:grid-cols-2 my-1">
   <AwardeeCard
+    awardeeName="Ansys"
+    awardYear={2022}
+    profileImg="/images/awards/alliance-award/ansys-logo.png"
+    altDesc="logo of Ansys"
+    width={396}
+    height={128}
+  />
+  <AwardeeCard
+    awardeeName="Raytheon Strategies"
+    awardYear={2021}
+    profileImg="/images/awards/alliance-award/raytheon-logo.jpg"
+    altDesc="logo of Raytheon Strategies"
+    width={320}
+    height={200}
+  />
+  <AwardeeCard
     awardeeName="Lockheed Martin"
     awardYear={2020}
     profileImg="/images/awards/alliance-award/lockheed-martin-2020.png"
