--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -51,7 +51,10 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       job/school consider presenting at oSTEM's Annual Conference.
       <br />
       <br />
-      <b> Deadline was extended to Friday, June 30th. Submit your proposal today! </b>
+      <b>
+        {" "}
+        Deadline was extended to Friday, June 30th. Submit your proposal today!{" "}
+      </b>
     </p>
     <div className="text-xl flex justify-center p-2">
       <CTAButton onClick="/2023/rfp" backgroundColor="bright-peach">
@@ -96,7 +99,6 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 </div>
 
 <div className="mt-8">
-  {" "}
   <Image
     src="/images/2023/2023_homepage_image.jpg"
     alt=""
