--- a/src/pages/2023/awards-chapter-leader.mdx
+++ b/src/pages/2023/awards-chapter-leader.mdx
@@ -79,7 +79,7 @@ regarding this application, please contact us at membership@ostem.org.
     height={225}
   />
   <AwardeeCard
-    awardeeName="Billie Harrer - Region C Coordinator"
+    awardeeName="Billie Harrer - Georgia Tech"
     awardYear={2019}
     profileImg="/images/awards/chapter-leader-award/william-harrer-2019.jpeg"
     altDesc="Profile picture of Billie Harrer"
