--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -116,9 +116,9 @@ organization and have questions, please reach out to sponsorship@ostem.org
 
 ## Hotel
 
-[Anaheim Marriott](https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611)
+### [Anaheim Marriott](https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611)
 
-<br /> 700 W Convention Way. <br /> Anaheim, CA 92802
+700 W Convention Way. <br /> Anaheim, CA 92802
 
 <div className="my-2">
   <CTAButton onClick="https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611">
