--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -108,9 +108,9 @@ If you would like to recruit at oSTEM, please email sponsorship@ostem.org.
 
 **Sponsor and Exhibitor registration is OPEN for 2023. **
 
-This year's Exhibitors and Sponsors should have received a code that will allow
-you to register at the button below. If you are a sponsor or from a sponsoring
-organization and have questions, please reach out to sponsorship@ostem.org
+Each organization's primary contact person will receive instructions for their
+representatives to register on Whova. If you are a sponsor or from a sponsoring
+organization and have questions, please reach out to sponsorship@ostem.org.
 
 ---
 
