Add title photo for rfp

--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -1,12 +1,22 @@
 import { CTAButton } from "../../components/button/CTAButton";
 import { SiteLayout } from "../../components/layout/SiteLayout";
 import { TopicSquare } from "../../components/rfp/TopicSquare";
+import Image from "next/image";
 
 <SiteLayout title="Request for Proposals">
 
 <div className="border-b-4 border-chill-green border-solid pb-4 mb-4 text-center">
   <p className="text-5xl font-display font-black">Requests for Proposals</p>
 </div>
+
+<Image
+  src="/images/2022-11-12 oSTEM_2489.jpg"
+  alt=""
+  layout="responsive"
+  width="400"
+  height="180"
+  priority="true"
+/>
 
 <div className="text-bright-peach font-bold">
 
@@ -21,20 +31,23 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 <div className="text-bright-peach font-bold">
 
 ## Benefits for Presenters
-  
+
 </div>
 
-- 50% registration discount for selected presenters. Each selected panel is limited to 4 presenter discount codes. <br/>
+- 50% registration discount for selected presenters. Each selected panel is
+  limited to 4 presenter discount codes. <br/>
 - Add "Selected Talk for National Conference" to resume or CV <br/>
 - Gain additional public speaking experience <br/>
-- Increase visibility and networking opportunities with LGBTQ+ professionals and recruiters in STEM <br/>
-- Present on lived experiences and identities in addition to academic and professional development topics <br/>
-- Receive presenter acknowledgement in conference program book and on badge <br/>
+- Increase visibility and networking opportunities with LGBTQ+ professionals and
+  recruiters in STEM <br/>
+- Present on lived experiences and identities in addition to academic and
+  professional development topics <br/>
+- Receive presenter acknowledgement in conference program book and on badge
+  <br />
 
 <div className="text-bright-peach font-bold">
-  
 
-  ## Program Topics
+## Program Topics
 
 </div>
 
