--- a/src/pages/2023/partnership.mdx
+++ b/src/pages/2023/partnership.mdx
@@ -19,6 +19,8 @@ import Image from "next/image";
 
 <br />
 
+---
+
 ### <div>Exhibition and Sponsorship</div>
 
 <div>
@@ -69,6 +71,8 @@ Have questions or need more information? Please contact sponsorship@ostem.org.
 
 </div>
 
+<br />
+
 ---
 
 <div className="mt-6">
@@ -80,9 +84,13 @@ Have questions or need more information? Please contact sponsorship@ostem.org.
   </div>
 </div>
 
+<br />
+
 <div>
   <div title="Whova event and conference app" id="whova-exhibitorwidget">
     <p id="whova-loading">Loading...</p>
+    <p>If the widget doesn't show up automatically, please refresh the page.</p>
+    <br />
   </div>
   <script
     src="https://whova.com/static/frontend/xems/js/whova-exhibitor-widget.js?eid=VkbdCZs0bUTD7CBXoTo3pVELzjHXdOek0MkKW2pd9qM%3D&host=https://whova.com"
@@ -92,6 +100,7 @@ Have questions or need more information? Please contact sponsorship@ostem.org.
   <div id="whova-wrap" class="whova-wrap-class">
     Powered By
     <a class="brandlink" target="_blank" href="https://whova.com">
+      {" "}
       <b>Whova</b>
     </a>
     <br />
