--- a/src/pages/2023/partnership.mdx
+++ b/src/pages/2023/partnership.mdx
@@ -88,8 +88,10 @@ Have questions or need more information? Please contact sponsorship@ostem.org.
 
 <div>
   <div title="Whova event and conference app" id="whova-exhibitorwidget">
-    <p id="whova-loading">Loading...</p>
-    <p>If the widget doesn't show up automatically, please refresh the page.</p>
+    <p id="whova-loading">
+      Loading...(If the widget doesn't show up automatically, please refresh the
+      page.)
+    </p>
     <br />
   </div>
   <script
