Add faq & benefit sections

--- a/src/pages/2023/awards.mdx
+++ b/src/pages/2023/awards.mdx
@@ -24,6 +24,10 @@ supporters during the oSTEM Annual Conference. Please review the award
 descriptions below and provide nominations for those individuals and groups you
 believe deserve recognition.
 
+<br />
+
+---
+
 <div className="text-bright-peach font-bold">
 
 ## Our Awards
@@ -66,6 +70,8 @@ info@ostem.org or by contacting the individual team responsible for the award._
 
 <br />
 
+---
+
 <div className="text-bright-peach font-bold" id="service-awards">
 
 ## Service Awards
@@ -91,6 +97,18 @@ info@ostem.org or by contacting the individual team responsible for the award._
 ## Chapter Awards
 
 </div>
+
+### Benefits
+
+- A chance to celebrate all that you have accomplished over the past year and to
+  demonstrate to those outside of your chapter or organization the amazing
+  things you do.
+- Be recognized at an award ceremony during the Annual oSTEM Conference.
+- **Chapter, Rookie, and Chapter Leader Awards** will receive 4 free student
+  registrations and reimbursement of 3 room nights at the conference hotel if
+  booked under oSTEM block by Monday, October 16, 2023. ($1,500 value)
+- **Advisor Award** receives 1 free professional registration + 3 free student
+  registrations. ($775 value)
 
 <div>
   <AwardCard
@@ -209,7 +227,86 @@ info@ostem.org or by contacting the individual team responsible for the award._
   borderColor="border-green-500"
   awardDetailUrl="/2023/awards-volunteer"
 />
-<div>
+
+<br />
+
+---
+
+<div className="text-bright-peach font-bold" id="faq">
+
+## Frequently Asked Questions
 
 </div>
+
+### What are the rules?
+
+- You can nominate as many people and/or chapters as you want for the same or
+  multiple awards.
+- Anyone can nominate, regardless of whether they are a member of your oSTEM
+  chapter or not. Students, alumni, staff, friends, family, sponsors, event
+  attendees, people you've worked with, school teachers and members of the
+  public are all welcome to submit nominations.
+- Don't hesitate to nominate yourself or your chapter! After all, you have the
+  best understanding of your own achievements and what deserves to be
+  celebrated.
+
+### What makes a good nomination?
+
+Writing nominations can be a challenge. You may know this person or chapter is
+amazing and it's often difficult to express this in a few words. Here are some
+hints and tips to what makes a good nomination:
+
+<div className="my-4">
+
+- **Quality over quantity:** While it's fantastic to have numerous individuals
+  interested in nominating the same person or activity, keep in mind that the
+  quantity of nominations does not carry weight in the judges' decision-making
+  process. They are primarily seeking high-quality and impactful submissions.
+- **Emphasize impact:** Highlight the impact of the person or chapter you're
+  nominating. For instance, if they organized a panel, specify how many people
+  showed up. Showcasing tangible outcomes demonstrates the impact.
+- **Seek inspiration from previous winners:** Take some time to read about the
+  achievements of previous award recipients. Reading about their accomplishments
+  can serve as a valuable source of inspiration and guide you in crafting an
+  outstanding nomination.
+- **Provide ample details:** When nominating someone or a chapter, make sure to
+  include as much information as possible. You already know how amazing they
+  are, so convey that to the judges by giving them a comprehensive picture of
+  everything.
+- **Assume no prior knowledge:** Remember that the judging panel may have no
+  prior knowledge about the person or activity you're discussing. Therefore, let
+  them know and use concrete examples to illustrate why the nominee or their
+  accomplishments are exceptional.
+
+</div>
+
+### When are the winners announced?
+
+Winners will be announced via our social media and email. We will also be coming
+together to celebrate our winners at an evening award ceremony during our annual
+conference this year hosted in Anaheim, CA.
+
+### Who decides the winners?
+
+The awards will be judged by a panel of membership volunteers. Across the
+membership team is a diverse range of backgrounds and experiences. Identifiable
+information such as chapter name and nominee name will be removed from the
+nomination to reduce bias by the Head Judge. All those judging will be asked to
+declare their biases in advance and will be requested by the Head Judge to not
+be involved in any decisions where they are deemed to have a conflict of
+interest. All judging will take place in September.
+
+### What is oSTEM's data policy with the nominations?
+
+- Only members of the oSTEM Inc. Membership team will have access to the
+  nomination data.
+- Your data will not be shared and you have the right to request all nominations
+  submitted to your name.
+- Judges will receive copies of nominations only; no information on the
+  nominator will be shared.
+- You have the right to withdraw your nomination at any time prior to the
+  judging. Simply email membership@ostem.org.
+- All award winners will be published on our social media and website. You have
+  the right to opt out by emailing membership@ostem.org.
+
 </SiteLayout>
